refactor(afralves-clean-arch): remove User entity from listUsers boundary