@@ -1,12 +1,12 @@
 package com.afralves.cleanarchitecture.infrastructure.adapter.controller.converter;
 
+import com.afralves.cleanarchitecture.application.usecases.listusers.ListUsersOutput;
 import com.afralves.cleanarchitecture.domain.entity.User;
 import com.afralves.cleanarchitecture.infrastructure.adapter.controller.request.CreateUserRequest;
 import com.afralves.cleanarchitecture.infrastructure.adapter.controller.response.ListUserResponse;
 import com.afralves.cleanarchitecture.infrastructure.adapter.controller.response.UserResponse;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 public class UserDtoConverter {
 
@@ -20,17 +20,17 @@ public class UserDtoConverter {
 
     public UserResponse toResponse(User user) {
         return new UserResponse(
+                user.getId(),
                 user.getEmail(),
                 user.getName()
         );
     }
 
-    public ListUserResponse toCreateUserResponse(List<User> users) {
-        final var usersReponse = users.stream()
-                .map(this::toResponse)
-                .collect(Collectors.toList());
-
-        return new ListUserResponse(usersReponse);
+    public ListUserResponse toCreateUserResponse(List<ListUsersOutput> users) {
+        final var usersResponse = users.stream()
+                .map(user -> new UserResponse(user.id(), user.email(), user.name()))
+                .toList();
+        return new ListUserResponse(usersResponse);
     }
 
 }
